<?xml version="1.0" encoding="utf-8"?>


<ScrollView

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
>

    <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".FilmDetailsActivity"
            android:orientation="vertical"
            android:id="@+id/lay_parent"
    >


        <ImageView
                android:id="@+id/img_details_id"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/creed_cover"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"


        />


        <RelativeLayout
                android:id="@+id/layout_description"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_below="@+id/img_details_id"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
        >

            <TextView
                    android:id="@+id/tv_movie_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_name"
                   android:layout_marginLeft="140dp"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:layout_marginTop="20dp"

            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_description"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:layout_below="@+id/tv_movie_category"
                    android:layout_alignStart="@+id/tv_movie_category"
                    android:layout_alignLeft="@+id/tv_movie_category"
                    android:layout_alignRight="@+id/tv_movie_category"

            />


        </RelativeLayout>

        <RelativeLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="280dp"
                android:orientation="horizontal"

        >

            <ImageView

                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:src="@drawable/creed"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/border"


            />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    style="@style/Widget.MaterialComponents.FloatingActionButton"
                    android:src="@drawable/ic_favorite_border_black_24dp"
                    app:elevation="5dp"
                    android:backgroundTint="@color/amber"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"/>


        </RelativeLayout>


        <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/layout_data"
                android:orientation="horizontal"
                android:layout_below="@+id/layout_description"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"

        >

            <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date_range_black_24dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"


            />


            <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"


            />

            <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/Widget.Material.RatingBar.Small"
                    android:numStars="10"
                    android:progressTint="@android:color/holo_orange_dark"
                    android:stepSize="0.5"
                    android:layout_marginLeft="30dp"


            />

            <TextView
                    android:id="@+id/tv_print_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10.0"
                    android:textSize="15sp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"

            />


        </LinearLayout>


        <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_data"
                android:orientation="vertical"

        >

            <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_overview"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_margin="20dp"
                    android:textColor="#000"

            />


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_overview_details"
                    android:textSize="17sp"
                    android:layout_margin="20dp"
                    android:textColor="#464646"


            />


        </LinearLayout>


        <ImageView

                android:id="@+id/img_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:layout_margin="30dp"



        />


        <ImageView

                android:id="@+id/img_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_black_24dp"
                android:layout_margin="30dp"
                android:layout_alignParentRight="true"

        />





    </RelativeLayout>

</ScrollView>


